# local-llm-rag

./: .env-local-example  .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  pyproject.toml
.claude/: settings.json
eval-reports/: 2026-06-17-baseline.md
examples/: github-actions-eval-gate.yml
examples/devseed-oss/: golden.yml  rag.yml
examples/models/: phi4-mini.yml  qwen3-4b.yml
rag_lab/: cli.py  config.py  filters.py  ingest.py  mcp_server.py  pipeline.py  prompts.py  types.py
rag_lab/agent/: agent.py  parser.py  tools.py
rag_lab/chunkers/: base.py  fixed.py  markdown_aware.py  recursive.py  semantic.py  splitting.py
rag_lab/embedders/: base.py  fake.py  ollama.py
rag_lab/eval/: aggregate.py  gates.py  golden_set.py  mcp_tools.py  reporter.py  run_artifact.py  run_store.py  runner.py  service.py
rag_lab/eval/scorers/: abstention.py  citation.py  deepeval_scorer.py  keyword.py  llm_judge.py  retrieval.py
rag_lab/llms/: base.py  fake.py  gemini.py  ollama.py
rag_lab/loaders/: base.py  combined.py  github.py  github_issues.py  markdown.py
rag_lab/rerankers/: base.py  llm.py
rag_lab/retrievers/: base.py  bm25.py  hybrid.py  reranking.py  vector.py
rag_lab/store/: sqlite_vec.py
rag_lab/studio/: app.py  build_settings.py  charts.py  components.py  config_logic.py  config_panel.py  corpora.py  experiments.py  feedback.py  golden_io.py  indexer.py  models.py  presets.py  pull_ui.py  share.py  sidebar.py  trace_view.py  ui_state.py  workspace.py
rag_lab/studio/pages/: corpora.py  evaluate.py  golden.py  playground.py  runs.py
tests/: conftest.py
tests/fixtures/corpus/: alpha.md  beta.md
tests/integration/: test_ask_end_to_end.py  test_ingest.py
tests/unit/: test_abstention_scorer.py  test_agent.py  test_agent_tools.py  test_aggregate.py  test_bm25_retriever.py  test_charts.py  test_citation_scorer.py  test_cli.py  test_combined_loader.py  test_config.py  test_deepeval_scorer.py  test_eval_runner.py  test_fake_llm.py  test_feedback_shim.py  test_filters.py  test_fixed_chunker.py  test_gates.py  test_gemini_provider.py  test_generation_stats.py  test_github_issues_loader.py  test_github_loader.py  test_golden_set.py  test_hybrid_retriever.py  test_keyword_scorer.py  test_llm_judge.py  test_llm_reranker.py  test_markdown_aware_chunker.py  test_markdown_loader.py  test_mcp_tools.py  test_ollama_embedder.py  test_ollama_llm.py  test_pipeline.py  test_presets.py  test_prompt_builder.py  test_prompts.py  test_react_parser.py  test_recursive_chunker.py  test_reporter.py  test_reranking_retriever.py  test_retrieval_scorers.py  (+22 more)
