[project]
name = "rag-lab"
version = "0.1.0"
description = "Local-first RAG framework for any markdown docs corpus"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anthony Boyd" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "ollama>=0.3",
    "httpx>=0.27",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.7",
    "python-frontmatter>=1.1",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]
studio = [
    "streamlit>=1.36",
    "altair>=5",
]
deepeval = [
    "deepeval>=2.0",
]
gemini = [
    "google-genai>=1.0",
]
mcp = [
    "mcp>=1.2",
]

[project.scripts]
rag-lab = "rag_lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"rag_lab/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks integration tests requiring Ollama",
]

[tool.uv.sources]
streamlit-testing-feedback = { path = "../streamlit-testing-feedback", editable = true }

[dependency-groups]
feedback = [
    "streamlit-testing-feedback",
]
